// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStyling samples Sample1Text rendering with no overrides 1`] = `
<Text
  style={
    Object {
      "color": "black",
      "fontFamily": "Arial",
      "fontSize": 12,
    }
  }
>
  Sample1a
</Text>
`;

exports[`useStyling samples Sample1Text rendering with some custom settings in the theme 1`] = `
<Text
  style={
    Object {
      "color": "pink",
      "fontFamily": "Arial",
      "fontSize": 24,
    }
  }
>
  Sample1b
</Text>
`;

exports[`useStyling samples Sample2Text rendering with defaults and a color override 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "black",
        "fontFamily": "Arial",
        "fontSize": 12,
      }
    }
  >
    Sample2 with defaults
  </Text>
  <Text
    style={
      Object {
        "color": "green",
        "fontFamily": "Arial",
        "fontSize": 12,
      }
    }
  >
    Sample2 with color override via prop
  </Text>
</View>
`;

exports[`useStyling samples Sample2Text rendering with some custom settings in the theme 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "pink",
        "fontFamily": "Helvetica",
        "fontSize": 18,
      }
    }
  >
    Sample2 with theme overrides set
  </Text>
  <Text
    style={
      Object {
        "color": "purple",
        "fontFamily": "Helvetica",
        "fontSize": 18,
      }
    }
  >
    Sample2 with theme and color prop override
  </Text>
</View>
`;
